--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -35,23 +35,430 @@ talks about.  How to get rich quick.
 * TODO Avoid the slow lane
 SCHEDULED: <2022-02-15 Tue>
 
+Now, the first important lesson in the book is that we want to avoid
+the slow lane.  And the point that our friend, MJ, makes in the book,
+is that "get rich quick" is often seen as, like, a scammy thing.  Oh,
+it's a get-rich-quick scheme.  But actually, it's not get-rich-quick
+that's a problem, it is get-rich-easy.  Like it is very possible to
+get rich quick, and that is why we're talking about The Millionaire
+Fastlane.  It's very possible to get rich quick, but it's not at all
+possible to get rich easy.  And so, if someone is trying to sell you
+that it is easy to get rich, that is a scam and you should avoid it.
+And one of the interesting things that he talks about in the book is
+the idea that there are three paths through life.  There's path number
+one, which is the sidewalk.  This path to the slow lane, and path
+number three, the fast lane.  The sidewalk is basically where people
+who are living paycheck to paycheck live, people who don't have a lot
+of money.  I'm not gonna talk about it too much.  It's a bit
+disparaging.  It's very American style.  Sort of very brash way of
+describing it that he does.  Like, you know, "If you're living on the
+sidewalk, then you're living paycheck to paycheck."  And like, "Your
+life is screwed because you believe that the government is screwing
+you over," all that kind of stuff.  We're not gonna talk about that
+too much.  There are a few bits like that in the book where you have
+to kind of read or listen to it with a little pinch of salt.  But I
+think the second path through life, the slow lane, is interesting.
+Because if you follow the slow lane, you can still get rich.  And the
+slow lane is generally, if you're watching this, probably your
+parents' generation stood by the slow lane.  The idea of the slow lane
+is that, you know, you go to school.  You get good grades. You get a
+decent job.  You work your way up the ladder in your job, whatever
+your job is.  You save some percentage of your paycheck.  You put that
+into investments, maybe in the stock market, if you're particularly
+rogue.  But probably, you know, you should invest in property and real
+estate because property is a good investment.  And over time,
+eventually, you will have enough of a nest egg such that when you
+retire, then you will be rich.  And you can enjoy your retirement at
+the age of 65 when you have osteoarthritis in both of your knees.
+That is, basically, the idea of the slow lane.  And he talks about how
+there are three traps that we can fall into, which will end up keeping
+us on the slow lane.  The first trap is that life in the slow lane
+looks like it's pretty safe.  You can think that, "Okay, once I get
+this job, then my life is pretty safe and I'm pretty sorted."  But if
+the pandemic has taught us anything, and if, you know, the way the
+world is at the moment, A: it's actually not that safe.  You actually
+could lose your job.  If you're, fine, if you're a doctor or something
+like that, where you're unlikely to lose your job, that's still pretty
+safe.  But even so, what he says is that there are a tonne of other
+unexpected events that happen in life.  Like if there's a market crash
+like there was in 2008, or if you have kids, Or if you get divorced.
+Or if you have a health problem and you live in a stupid country, like
+America, where that could potentially bankrupt you.  There are all of
+these fairly common, unexpected events that can happen in life that
+make life in the slow lane not actually as safe an option as it
+might've been for our parents' generation.  The second trap that Slow
+Laners can fall into is this idea that if we build our intrinsic
+market value enough, then we will get rich.  So, for example, these
+are the people who think, "Okay, I've worked my job for two years.
+Now I'm gonna go and get an MBA and pay like however many tens of
+thousands of dollars to get an MBA.  Because then once I have that
+degree, then I will be worth more to my future employer."  But the
+problem with that style of thinking is that it's not really the fast
+lane approach to building wealth.  It is still, ultimately, trading
+your time for money.  And yes, fine.  If you get you that extra
+degree, if you get that extra qualification, your time will be worth
+more.  A little bit more, maybe even significantly more, but
+ultimately, you're still just trading your time for money.  And that
+is a very slow-laney way to approach building wealth.  And the third
+trap that Slow Laners can fall into is just not even believing it's
+possible to get rich quick, unless you're super lucky or super
+talented.  But, as MJ says, even if you can't get rich easy, which is
+not a thing, you can get rich relatively quick, if quick is 10 years.
+10 years is the definition of quick, which to be honest, it's pretty
+quick.  But a lot of us, when we think "get rich quick", we're
+thinking a few weeks.  That is not a thing.  What he's arguing for is
+a process that will take probably around 10 years to get rich quick.
+And that is actually quick, in his book.
 
 *  Work the process
 
+And that brings us on to lesson number two, which is to work the
+process.  Now in the book, he talks a lot about how wealth is not an
+event.  Like, getting rich is not this sort of binary thing where one
+day you're living paycheck to paycheck and the next day suddenly
+you've got millions in the bank.  It is a longer drawn-out process
+that takes usually many years to do.  But the problem is that the
+media often reports wealth as being an event, and those are the
+stories we latch on to.  One of the stories he talks about is this
+guy, John Darius Bikoff, who founded Glaceau Vitamin Water in 1996.
+11 years later he sold the company to Coca-Cola for $4.1 billion.  And
+in that 11 year long story, the thing that people remember is the
+event.  But what they forget is the process of 11 years that took so
+long to get to that point.  Therefore, wealth building is not an
+event, it's a process.  And it's exactly the same thing with building
+a creative business, building a YouTube channel.  You know, it's easy
+to see creators and their overnight successes, and all that jazz.  But
+you don't see the five years they spent making videos that no one was
+watching to get to the point where they could then have the "event" of
+the overnight success.
+
 *  Build money trees
+
+All right, so lesson number three is to build money trees.  Now we've
+all heard that phrase that money doesn't grow on trees.  But what he
+says in the book is "Money does actually grow on trees, provided you
+build a tree that grows money."  So what does this mean?  He says in
+the book that, "Money trees are business systems that survive on their
+own.  They require periodic support and nurturing, but they survive on
+their own, creating a surrogate for your time for money trade."
+Basically what we're doing is we're building a business.  We're
+building this money tree where the amount of wealth we can generate is
+not directly tied to the amount of time that we're putting into it.
+This brings us onto the next question, which is how do we actually
+build a money tree?  And he talks about, there's like four or five
+different types of money trees that we could potentially build.  The
+first one is that we could build a rental system.  And a rental system
+is basically anything that involves renting out something that you
+already own.  So if you have a bunch of real estate properties, and
+you rent them out, that is a rental system.  The problem is it's very
+hard to get to the point where you have a bunch of properties to rent
+out, 'cause you're already probably rich at that point.  The other way
+of building a rental system is by licencing.  For example, if you're a
+musician and you want to licence your audio that other people can use.
+In a way, they're paying you rent for this thing that you own.
+Secondly, what you could do is you could build a distribution system.
+Now this is basically a system that connects people who want something
+with the people who are supplying that thing.  So for example, Amazon
+is a distribution system.  It connects buyers with sellers and Amazon
+is the middleman.  And therefore, if you build the middleman, if you
+build a distribution system, you can get really, really, really,
+really rich.  Now interestingly, one really great distribution system
+is a company like AppSumo, who are completely coincidentally
+sponsoring this video.  AppSumo is run by my friend, Noah Kagan.  It's
+ridiculously great company, and what they do is that they give you the
+best deals in software.  Their model connects people who want
+software, people like me and you probably.  If you're watching this,
+you're interested in software just as much as I am with the people
+that want to sell software that have software that they want to sell.
+And they give you that software in a way that's either free or just,
+like, amazingly well-priced.  Every week, there's new deals added to
+the website.  And it's not just software, it's also online courses,
+It's also education.  And so if you want to learn anything in this
+how-to-build-a-business sphere, AppSumo probably has it covered.  And
+the whole vibe of AppSumo is that it's very like indie hackers,
+start-upy kind of vibes.  They do have a couple of tools that are
+suited for enterprises.  Mostly it's aimed at individuals and small
+businesses, which is probably the type of business you want to make if
+you want to get rich quick using The Millionaire Fastlane.  And I'm
+even recording this to you from the future to tell you all about their
+Black Friday giveaway.  So last year on Black Friday, they gave away a
+Tesla, which was pretty cool.  But this year, they're giving away a
+million dollars worth of stuff to entrepreneurs, not who buy their
+product, but who list their own product on the AppSumo marketplace.
+So if you have a product that you want to sell on the AppSumo
+marketplace and you list it somewhere between now and November 17th,
+2021, then the first 400 people, just to list a product, will get
+$1,000 of free money from the AppSumo team.  And the next 2,000 people
+to list a product are gonna get $250 completely for free.  You don't
+even have to make any sales of your product.  You will just get that
+free money in return for just listing your product on the marketplace.
+That's pretty cool.  And then everyone who enters of those 10 people
+will be lucky dipped to get $10,000, which is also pretty sick.  So if
+you've got any kind of digital product and you want to stick it on
+AppSumo, you can check out the marketplace to see what things you want
+to buy because they're all discounted.  But you can also sell your
+thing on AppSumo and it's pretty easy.  You just submit your product,
+you go live with it, and then you get paid.  So again, if you list
+your product on AppSumo marketplace up until November the 17th, 2021,
+then you can grab your share of the $1 million giveaway fund.  And you
+might be one of 10 people lucky enough to win a check for $10,000.  If
+that's up on your street, hit the link in the video description, you
+can check out all the products.  And you can potentially sell your own
+things.  So thank you, AppSumo, for sponsoring this video.  All right,
+thirdly, when it comes to building a money tree, we have a software
+system, But it is five o'clock and I have a Zoom call to attend.  So I
+will be right back. (claps hands) All right, we're back.  We've got a
+slight change to the lighting, but the third type of system that you
+can make to make this money tree.  I'm so glad. I'm so glad that
+worked.  I really hope this is gonna work in the edit.  Anyway, the
+third type of money tree we want to create is a software system.  Now,
+that's pretty standard.  You make the software once and then you can
+charge people for the software or for the digital product.  And then
+you can make money multiple times because the cost of distribution and
+the cost of replication is effectively zero.  I've made a bunch of
+software products in my time when I was in med school.  I built
+something called BMAT and UCAT Ninja, which was like a software
+platform that helped people get into med school by helping them
+prepare for the med school admissions exams.  One of my YouTuber
+friends, Oliur, managed to make $9,000 in a single week by selling
+icons that he designed.  So that's a digital asset.  He puts the work
+into creating it once and it's sort of like a software system whereby
+other people can just buy the thing because it is, ultimately,
+software.  And the fourth system that our friend, MJ, talks about is
+my favourite kind.  And that is the content money tree, the content
+system, where basically the idea is you create content.  So if you
+write a book, or make a YouTube video, or write a blog post, or make
+an online course that you can sell, ultimately, this is all content.
+It takes an investment of time and effort to write the book or create
+the content once.  But then you can sell it to multiple people further
+down the line.  And similar to the digital stuff, it has basically
+zero cost of replication and distribution, assuming it's on the
+internet.  And if it's a book, well then, there are some costs
+associated with it.  But it's still broadly a way of making money
+that's not tied to your own time.  For example, like two years ago
+now, a year ago, or something, I made a Skillshare class about how to
+study for exams.  And that class brings in about $10,000 every single
+month in pure passive income.  And I don't do it- I basically do
+nothing to promote it.  By the way, if you have exams coming up, check
+out my Skillshare class.  It'll be linked for free in the video
+description if you want to check it out.  But it's amazing how you can
+just do the work to make something once.  Although, in fairness, I was
+creating study-themed content on YouTube for two years before I made
+that class.  So again, it wasn't a get-rich-quick scheme.  It wasn't a
+get-rich-easy scheme.  But it was like a money tree that built up over
+time and has now helped pay the mortgage on my house.  So we've talked
+about the four different types of money tree, but what MJ says in the
+book is that, and what's obviously true, is that it's not that easy to
+build one of these.  You don't just magically have the ability to do
+that.
 
 *  Switch from being a consumer to a producer
 
+And one of the ways that you can is lesson number four, which is
+switch from being a consumer to being a producer.  Now from a young
+age, society broadly teaches us that we should be consumers.  And we
+should be thinking about what to buy, you know?  Our parents are like,
+"Johnny, what do you want for your birthday?"  "What are you gonna buy
+when you get that-" Or you know, "What would you buy if you had a
+million dollars, if you won the lottery?"  It's all very much based on
+being a consumer.  But, as MJ tells us in the book, this consumer
+mindset is never gonna help us to actually build wealth.  Instead, we
+need to think to a producer mindset.  And this genuinely changes the
+way that you approach the world.  Like if you think in the eyes of a
+consumer and you see some cool- I was in the Samsung store earlier
+today.  It's fairly close to where I live. It's really cool.  I'm
+thinking as a consumer like, "Bloody hell, there's all these phones
+and watches and gadgets and fridges and microwaves and all this cool
+stuff.  And the store is really nice.  And I want a fancy new sofa
+because that's a fancy new sofa.  But if you have more of a producer
+mindset, then you start thinking you could- you kind of ignore the
+fact that there's all this stuff out there you can buy.  Instead, you
+start thinking, "Oh, this is an interesting marketing play that
+they're doing."  "I wonder how much it costs to put the store
+together?"  "Oh, I wonder if I could make a video where I switched
+from iPhone to Samsung because there's so many Samsung phones here?
+So I can make a video where I talk about it and switch.  And then
+teach people what it's like to switch from an iPhone to an Android",
+and all that kind of jazz.  And so the way I'm thinking there is,
+hopefully, as a producer, rather than a consumer.  And if you want a
+practical tip for how this works, I think, really, the key is to just
+think about what's going on on the business side of stuff when you are
+out and about.  For example, next time you're in McDonald's, instead
+of thinking how tasty your Filet-O-Fish burger is, think, "Huh, I
+wonder how it is that McDonald's created a system whereby every single
+fish burger in every single McDonald's basically tastes the same?"
+"How do they do that?"  That's pretty incredible.  And then you can
+read a book like "The E-Myth Revisited", which is, again, one of my
+favourite business books of all time that talks about exactly how
+McDonald's built this sort of franchise system.
+
 *  Show commitment, don't just show interest
 
-*  1.The commandment of need 
+And lesson number five, show commitment, don't just show interest.
+And this is a message that MJ talks about throughout the book.
+Basically, there's a difference between interest and commitment.  And
+if you want to get rich quick, but not easy.  If you wanna get rich
+quick, you have to do things that other people are not willing to do
+or not able to do.  And usually, that shows commitment rather than
+just interest.  And there's a nice quote from the book where he says
+that, "Interest works in your business one hour a day, Monday through
+Friday.  Commitment works in your business seven days a week, whenever
+time permits."  Now, when I was first growing this YouTube channel and
+the personal brand and the business and everything, I would spend
+basically every waking moment where I wasn't at work or at university
+or in lectures and stuff, thinking and planning videos.  And planning
+content and figuring out the business strategy and doing a lot of
+stuff.  And yes, someone might look at that and think, "Oh my god,
+toxic productivity, hustle culture," and all that jazz.  But you don't
+get to a point where you build a successful business or a successful
+YouTube channel, all this kind of stuff, you don't get to that point
+without putting in the hard, hard work.  And my point is that the hard
+work does not have to be suffering.  It's hard, but it doesn't have to
+be painful.  It can be fun.  And I find ways to make it fun.  And
+that's the subject of the book that I'm writing, how to make things
+fun.  But it does take work and it is hard.  It's not an easy process.
+And I think a lot of the kind of anti-productivity, toxic
+hustle-culture kind of zealots, are sort of campaigning for an easy,
+chilled-out life.  And that's totally fine.  If you want easy,
+chilled-out life, 100%, I'm not gonna argue with you, you do what you
+want.  But, what MJ says and what these sorts of people were like, you
+know, if you care about building wealth in a short amount of time, you
+can't take the easy route and have a chilled-out life.  You do have to
+start being committed to the stuff that you're doing, rather than just
+interested in it.  And there's so many people I know who've started
+YouTube channels or businesses that are like, "Oh, you know, I just
+want to do it for half an hour a day."  Okay, that's fine. You can do
+it for half an hour a day as a hobby.  But if you just do it for half
+an hour a day, you are very unlikely to be successful.  Which, I mean,
+in fairness, it kind of depends on what your goals are.  If you don't
+wanna become a millionaire through this business, whatever.  That's
+totally fine, be chilled out about it.  But if you do, if you want to
+follow The Millionaire Fastlane approach, you have to be committed,
+rather than just interested.  Okay. So we've talked about five of the
+different lessons.  And in fact, like there's tonnes of-- this is a
+very, very dense book.  It looks- I actually read this on- listened to
+this on Audible, so I didn't know how dense it was.  But actually, it
+reads more like a sort of textbook, rather than a storybook, which is
+kind of nice.  Like it's really, really good, would recommend.  Amazon
+link in the video description.  But so, we talked about five of the
+key lessons that I learned from this.  There's so many more, but I
+want to talk about his five commandments for building a business now.
+And his overall point on the book is that if you want to be on the
+Millionaire Fastlane, you have to follow all five of these
+commandments.  You don't have to follow all five, like dropping one or
+two could still make you rich, but it's just so much more likely for
+you to become a millionaire quickly i.e. in under 10 years, which is
+isn't that quick.  But quickly, if you follow all five of these
+commandments.
+
+*  1.The commandment of need
+
+The first one is the Commandment of Need.  And he says that 90% of
+businesses fail within the first five years because they don't satisfy
+the Commandment of Need.  And the Commandment of Need is that people
+actually need the thing that you are offering.  We have to create a
+business that provides value or solves people's needs or wants in some
+way.  And if we're not, it's really, really hard to build a business
+based on something that tries to solve a problem that people don't
+actually have.
 
 *  2.The commandment of entry
 
+Secondly, we have the Commandment of Entry.  And the idea here is that
+you ideally want to build a business in a zone where the barrier for
+entry is high rather than low.  And the reason you want this is
+because a high barrier to entry means that it's very difficult for
+someone else to copy your business.  For example, if you or me decided
+we wanted to start the next Amazon, that's really fricking hard.
+There is a very high barrier to entry to starting the next Amazon.
+But if there's a business that looks easy to other people to start,
+and there is a low barrier to entry, for example, starting a YouTube
+channel where the barrier to entry is low.  Or starting a podcast
+where it's even lower.  Or starting a blog where it's even lower than
+that.  Or starting a TikTok with even lower than that.  The lower the
+barriers to entry, the more competitive the landscape becomes.  And
+actually, one of the nice things I like about YouTube is that in this
+creative sphere, YouTube is still the thing that has the highest
+barrier to entry.  There is now, like every year, the bar for
+production value and quality and all this stuff rises.  And so, for a
+newcomer to get into the YouTube sphere, they kind of need to have
+decent gear and decent equipment.  It's like, "oh, and this takes us
+into a whole lot controversial territory", which I talk a lot about in
+my course, the Part-Time YouTuber Academy.  So I'm not gonna go into
+it here, but basically, I like YouTube because it has a higher barrier
+to entry than starting a TikTok or starting an Instagram page, for
+example.
+
 *  3.The commandment of control
+
+The third one is the Commandment of Control.  And that's the
+idea that at every step of the process, we want to be in control of
+the thing that we're trying to sell.  And if we don't control things,
+like the price or the way it's managed or the way that it's being
+sold, then it's hard to build a business on that.  This is partly why
+building a business of just a YouTube channel is very scary because it
+does not fulfil the Commandment of Control because ultimately, my
+business lives and dies by this YouTube channel.  That's really
+scary. That's really bad.  I am not fulfilling the Commandment of
+Control in this business that I've got around the YouTube channel.
+And that's why when I make courses like my Part-Time YouTuber Academy,
+I try and fulfil the Commandment of Control by being in control of as
+much of that process as possible.  This is also why MLM multi-level
+marketing schemes don't work because if you're selling someone else's
+product, who's also trying to get you to sell someone else's product,
+you ultimately don't really have the control over that process.  And
+therefore, if stuff goes wrong or stuff is bad, you personally can't
+really influence it.  And that's a very scary way to build a business.
 
 *  4.The commandment of scale
 
+Commandment number four is the Commandment of Scale.  And that's the
+idea that ideally, if you want to grow rich quick, the idea is you
+want to build a business that has the potential to scale up.  For
+example, starting a barber shop and cutting people's hair for £10 a
+pop is not a business that has very much potential to scale, unless
+you try and build up more and more and more barbershops and a chain of
+barbershops.  But then, that costs loads of money.  Whereas a software
+business or a content business really does have the potential to
+scale.  So ideally, you to build a business that satisfies the
+commandment scale.  And there's another thing that he talks about in
+the book that we haven't talked about in this video, which is the Law
+of Effection.  Basically, the law is that to make millions, you have
+to impact millions.  (chuckles) And it's pretty simple.  Like if you
+want to make millions off a YouTube channel, you have to be impacting
+millions of people.  If you want to make millions off a business, you
+have to be impacting millions of people or impacting fewer people, but
+with a very large amount of impact.  And so the Commandment of Scale
+kind of relates to that.  You can't get rich quick off of selling
+lemonade in your local neighbourhood.  You have to build a business
+that has the potential, at least, for scale.
+
 *  5.The commandment of time
+
+And finally, we have the Commandment of Time, that the idea here, as
+we talked about before, is that you want to build a business where the
+value of the business is disconnected from your personal time input.
+If you have to show up every single day, nine to five or whatever many
+hours to make your money, then that's not really true wealth.  And
+that is actually one of the problems with this YouTube business.  As
+great as the content business in, I have to keep showing up time and
+time again, to record videos like this one.  It's kind of fun. I'm
+having a great time.  And I would like to build a sort of business in
+the future.  One where I really don't have to show up at all to
+continue to do the work.  This is why writing a book is great because
+once you've written the book, people just buy it, assuming it's
+marketed well.  And assuming it's a good book, of course, all that fun
+stuff.  So that was a very, very long summary of some of the lessons
+in this enormous really, really good book, The Millionaire Fastlane,
+would recommend.  If you're interested in more ideas on how to be able
+to make money, how to build passive income, check out this video over
+here, which is nine passive income ideas.  And it talks about how at
+the time, I was making $27,000 a week from these passive income
+sources.  Thank you so much for watching.  Do hit the subscribe
+button, if you aren't already.  And I'll see you in the next video.
+
+
+Bye-bye.
+
 
 * Notes                                                      :noexport:notes:
